--- a/project/index.html
+++ b/project/index.html
@@ -144,6 +144,6 @@
     }
     window.onload = displayProducts;
     </script>
-
+    <!-- TESTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT -->
 </body>
 </html>
