--- a/project/index.html
+++ b/project/index.html
@@ -144,6 +144,6 @@
     }
     window.onload = displayProducts;
     </script>
-    <!-- TESTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT -->
+    <!-- นี่คือการทดสอบที่คววรจะได้แล้ว -->
 </body>
 </html>
