--- a/project/index.html
+++ b/project/index.html
@@ -114,23 +114,62 @@
                 </div>
             </div>
         </section>
-        <!-- FAQ Section -->
-        <section class="container faq">
-            <h2>คำถามที่พบบ่อย</h2>
-
-            <div class="faq-item">
-                <button class="faq-question">
-                     วิธีการจัดส่งกล้าข้าว
-                    <span class="icon">+</span>
-                </button>
-            <div class="faq-answer">
-                <ul>
-                    <li>เลือกต้นกล้าแข็งแรง อายุ 20–30 วัน</li>
-                    <li>ห่อรากด้วยผ้าหรือกระดาษชุบน้ำให้ชื้น</li>
-                    <li>ใส่กล่องหรือตะกร้าที่มีรูระบายอากาศ ไม่อัดกัน</li>
-                </ul>
+       <section class="page faq" id="page2">
+            <div class="content-box">
+                <h2>คำถามที่พบบ่อย</h2>
+                    <ul>
+                        <li>เลือกพันธุ์เหมาะกับพื้นที่</li>
+                        <li>ตรงฤดูกาล</li>
+                        <li>ต้านทานโรค</li>
+                        <li>ผลผลิตสูง</li>
+                        <li>เมล็ดพันธุ์คุณภาพ</li>
+                    </ul>
             </div>
-        <section
+        </section>
+        <!-- FAQ SLIDER -->
+        <section class="faq-slider">
+            <button class="arrow left" onclick="slideFAQ(-1)">&#10094;</button>
+
+            <div class="faq-wrapper" id="faqWrapper">
+
+         <!-- Slide 1 -->
+            <div class="faq-slide">
+                <h2>คำถามที่พบบ่อย → วิธีการจัดส่งอย่างไร</h2>
+                    <ul>
+                        <li>เลือกต้นกล้าแข็งแรง อายุ 20–30 วัน</li>
+                        <li>มัดเป็นกำเล็ก ๆ</li>
+                        <li>ห่อด้วยผ้าชุบน้ำ</li>
+                        <li>ใส่กล่องที่ระบายอากาศได้</li>
+                        <li>จัดส่งช่วงเช้าหรือเย็น</li>
+                    </ul>
+            </div>
+
+        <!-- Slide 2 -->
+            <div class="faq-slide">
+                <h2>คำถามที่พบบ่อย → จะเลือกพันธุ์อย่างไร</h2>
+                    <ul>
+                        <li>เลือกให้เหมาะกับพื้นที่</li>
+                        <li>ดูฤดูกาลเพาะปลูก</li>
+                        <li>ต้านทานโรค</li>
+                        <li>ให้ผลผลิตสูง</li>
+                        <li>เมล็ดพันธุ์คุณภาพ</li>
+                    </ul>
+            </div>
+
+         <!-- Slide 3 -->
+            <div class="faq-slide">
+                <h2>คำถามที่พบบ่อย → ปลูกเดือนไหนดีที่สุด</h2>
+                    <ul>
+                         <li>ฤดูฝน: พ.ค.–ต.ค.</li>
+                        <li>นอกฤดูฝน: พ.ย.–เม.ย.</li>
+                        <li>ต้องมีน้ำชลประทาน</li>
+                    </ul>
+            </div>
+
+            </div>
+
+            <button class="arrow right" onclick="slideFAQ(1)">&#10095;</button>
+        </section>
 
     <!-- Footer -->
     <footer>
