--- a/project/index.html
+++ b/project/index.html
@@ -41,8 +41,9 @@
                     <a href="#service" class="btn-secondary">จองบริการปักดำ</a>
                 </div>
             </div>
+            
         </section>
-
+        
         <!-- How it Works Section -->
         <section class="container how-it-works">
             <h2>วิธีการใช้งานระบบ</h2>
@@ -113,6 +114,62 @@
                 </div>
             </div>
         </section>
+       <section class="page faq" id="page2">
+            <div class="content-box">
+                <h2>คำถามที่พบบ่อย</h2>
+                    <ul>
+                        <li>เลือกพันธุ์เหมาะกับพื้นที่</li>
+                        <li>ตรงฤดูกาล</li>
+                        <li>ต้านทานโรค</li>
+                        <li>ผลผลิตสูง</li>
+                        <li>เมล็ดพันธุ์คุณภาพ</li>
+                    </ul>
+            </div>
+        </section>
+        <!-- FAQ SLIDER -->
+        <section class="faq-slider">
+            <button class="arrow left" onclick="slideFAQ(-1)">&#10094;</button>
+
+            <div class="faq-wrapper" id="faqWrapper">
+
+         <!-- Slide 1 -->
+            <div class="faq-slide">
+                <h2>คำถามที่พบบ่อย → วิธีการจัดส่งอย่างไร</h2>
+                    <ul>
+                        <li>เลือกต้นกล้าแข็งแรง อายุ 20–30 วัน</li>
+                        <li>มัดเป็นกำเล็ก ๆ</li>
+                        <li>ห่อด้วยผ้าชุบน้ำ</li>
+                        <li>ใส่กล่องที่ระบายอากาศได้</li>
+                        <li>จัดส่งช่วงเช้าหรือเย็น</li>
+                    </ul>
+            </div>
+
+        <!-- Slide 2 -->
+            <div class="faq-slide">
+                <h2>คำถามที่พบบ่อย → จะเลือกพันธุ์อย่างไร</h2>
+                    <ul>
+                        <li>เลือกให้เหมาะกับพื้นที่</li>
+                        <li>ดูฤดูกาลเพาะปลูก</li>
+                        <li>ต้านทานโรค</li>
+                        <li>ให้ผลผลิตสูง</li>
+                        <li>เมล็ดพันธุ์คุณภาพ</li>
+                    </ul>
+            </div>
+
+         <!-- Slide 3 -->
+            <div class="faq-slide">
+                <h2>คำถามที่พบบ่อย → ปลูกเดือนไหนดีที่สุด</h2>
+                    <ul>
+                         <li>ฤดูฝน: พ.ค.–ต.ค.</li>
+                        <li>นอกฤดูฝน: พ.ย.–เม.ย.</li>
+                        <li>ต้องมีน้ำชลประทาน</li>
+                    </ul>
+            </div>
+
+            </div>
+
+            <button class="arrow right" onclick="slideFAQ(1)">&#10095;</button>
+        </section>
 
     <!-- Footer -->
     <footer>
@@ -144,6 +201,6 @@
     }
     window.onload = displayProducts;
     </script>
-    <!-- นี่คือการทดสอบที่คววรจะได้แล้ว -->
+    testtttttttttttttttttttttttttttttttttttttttttttttttt
 </body>
 </html>
