--- a/project/checkout.html
+++ b/project/checkout.html
@@ -34,12 +34,17 @@
             <div class="contact-sidebar">
                 <h2>ข้อมูลพันธุ์ข้าว</h2>
                 <div class="product-preview">
-                    <img src="https://scontent.fcnx4-1.fna.fbcdn.net/v/t1.6435-9/68727995_2046961368782899_8682895568529260544_n.jpg?stp=dst-jpg_s960x960_tt6&_nc_cat=111&ccb=1-7&_nc_sid=833d8c&_nc_ohc=p9HxK_UD8BoQ7kNvwF-oPOs&_nc_oc=Adnj5bJfS0DAAwsuEgoZMJhE1Hf_61xQ2WPBrH3JSKboDI7oYvs3Kjlcfmhdkw183wc&_nc_zt=23&_nc_ht=scontent.fcnx4-1.fna&_nc_gid=TVRKscVPOLc4sI2N2jJfkQ&oh=00_Afkqhl75FWE5brb8trs3m0YcscvbAhr8Xxop2IP4Y1zriw&oe=696CF188" alt="ข้าวหอมมะลิ 105" class="order-image">
+                    <img src="images/jasmine105.png" alt="ข้าวหอมมะลิ 105" class="order-image">
                     <div class="product-info-text">
                         <strong>พันธุ์ข้าว: ข้าวหอมมะลิ 105</strong>
                         <p><i class="fas fa-seedling"></i> เวลาเจริญเติบโต: 120 วัน</p>
                         <p><i class="fas fa-tag"></i> ราคาต้นกล้า: 13 บาท / ถาด</p>
-                        <p><i class="fas fa-tractor"></i> บริการปักดำ: 1,800 บาท / ไร่ (รวมกล้าแล้ว)</p>
+                    </div>
+                    <img src="images/riceberry.png" alt="ไรซ์เบอร์รี่" class="order-image">
+                    <div class="product-info-text">
+                        <strong>พันธุ์ข้าว: ข้าวไรซ์เบอร์รี่</strong>
+                        <p><i class="fas fa-seedling"></i> เวลาเจริญเติบโต: 120 วัน</p>
+                        <p><i class="fas fa-tag"></i> ราคาต้นกล้า: 13 บาท / ถาด</p>
                     </div>
                 </div>
                 
@@ -87,13 +92,6 @@
                                 <option value="delivery">จัดส่งถึงที่</option>
                             </select>
                         </div>
-                    </div>
-
-                    <div class="form-group" style="background: #f9f9f9; padding: 15px; border-radius: 10px; border: 1px dashed var(--primary-color);">
-                        <label style="display: flex; align-items: center; gap: 10px; cursor: pointer;">
-                            <input type="checkbox" id="plantingService" style="width: 20px; height: 20px;">
-                            <span>ต้องการบริการปักดำ (1,800 บาท/ไร่ รวมกล้าแล้ว)</span>
-                        </label>
                     </div>
 
                     <div class="form-group" id="quantityArea">
