--- a/project/contact.html
+++ b/project/contact.html
@@ -19,7 +19,8 @@
                 <ul>
                     <li><a href="index.html">หน้าแรก</a></li>
                     <li><a href="products.html">สินค้า</a></li>
-                    <li><a href="#">จองบริการ</a></li>
+                    <li><a href="index.html#service">เกี่ยวกับเรา</a></li>
+                    <li><a href="#">ข่าวสาร</a></li>
                     <li><a href="contact.html" class="active">ติดต่อ</a></li>
                 </ul>
             </nav>
