--- a/project/sign-in.html
+++ b/project/sign-in.html
@@ -19,9 +19,9 @@
                 <ul>
                     <li><a href="index.html">หน้าแรก</a></li>
                     <li><a href="products.html">สินค้า</a></li>
-                    <li><a href="index.html#service">จองบริการ</a></li>
+                    <li><a href="index.html#service">เกี่ยวกับเรา</a></li>
                     <li><a href="#">ข่าวสาร</a></li>
-                    <li><a href="#">ติดต่อ</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </nav>
             <a href="sign-in.html" class="btn-signin active">เข้าสู่ระบบ</a>
