--- a/project/index.html
+++ b/project/index.html
@@ -118,39 +118,40 @@
         </section>
        
         <!-- FAQ SLIDER -->
-        <section class="faq-section">
-            <div class="faq-slider">
-            <div class="faq-wrapper" id="faqWrapper">
-                <div class="faq-slide">
-                    <h2>คำถามที่พบบ่อย → วิธีการจัดส่งอย่างไร</h2>
-                        <ul>
-                          <li>เลือกต้นกล้าแข็งแรง อายุ 20–30 วัน</li>
-                          <li>มัดเป็นกำเล็ก ๆ</li>
-                          <li>ห่อด้วยผ้าชุบน้ำ</li>
-                          <li>ใส่กล่องที่ระบายอากาศได้</li>
-                          <li>จัดส่งช่วงเช้าหรือเย็น</li>
-                       </ul>
-                </div>
+       <section class="faq-section">
+  <div class="faq-slider">
 
+    <button class="arrow left" onclick="slideFAQ(-1)">❮</button>
 
-            <div class="faq-slide">
-                   <h2>คำถามที่พบบ่อย → จะเลือกพันธุ์อย่างไร</h2>
-                        <ul>
-                            <li>เลือกให้เหมาะกับพื้นที่</li>
-                            <li>ดูฤดูกาลเพาะปลูก</li>
-                            <li>ต้านทานโรค</li>
-                            <li>ให้ผลผลิตสูง</li>
-                            <li>เมล็ดพันธุ์คุณภาพ</li>
-                        </ul>
-                 </div>
+    <div class="faq-wrapper" id="faqWrapper">
+      <div class="faq-slide">
+        <h2>คำถามที่พบบ่อย → วิธีการจัดส่งอย่างไร</h2>
+        <ul>
+          <li>เลือกต้นกล้าแข็งแรง อายุ 20–30 วัน</li>
+          <li>มัดเป็นกำเล็ก ๆ</li>
+          <li>ห่อด้วยผ้าชุบน้ำ</li>
+          <li>ใส่กล่องที่ระบายอากาศได้</li>
+          <li>จัดส่งช่วงเช้าหรือเย็น</li>
+        </ul>
+      </div>
 
-            </div>
-        </div>
-                
+      <div class="faq-slide">
+        <h2>คำถามที่พบบ่อย → จะเลือกพันธุ์อย่างไร</h2>
+        <ul>
+          <li>เลือกให้เหมาะกับพื้นที่</li>
+          <li>ดูฤดูกาลเพาะปลูก</li>
+          <li>ต้านทานโรค</li>
+          <li>ให้ผลผลิตสูง</li>
+          <li>เมล็ดพันธุ์คุณภาพ</li>
+        </ul>
+      </div>
+    </div>
 
-    <button onclick="slideFAQ(-1)">◀</button>
-    <button onclick="slideFAQ(1)">▶</button>
+    <button class="arrow right" onclick="slideFAQ(1)">❯</button>
+
+  </div>
 </section>
+
 
 
     <!-- Footer -->
