--- a/project/sign-up.html
+++ b/project/sign-up.html
@@ -15,17 +15,17 @@
 
     <header class="navbar">
         <div class="container">
-            <a href="index.html" class="logo">🌾 EASY RICE</a>
+            <a href="index.html" class="logo">🌾 EasyRice</a>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="index.html#service">Services</a></li>
-                    <li><a href="#">News</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">หน้าแรก</a></li>
+                    <li><a href="products.html">สินค้า</a></li>
+                    <li><a href="index.html#service">เกี่ยวกับเรา</a></li>
+                    <li><a href="#">ข่าวสาร</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </nav>
-            <a href="sign-in.html" class="btn-signin">Login</a>
+            <a href="sign-in.html" class="btn-signin active">เข้าสู่ระบบ</a>
         </div>
     </header>
 
