--- a/project/about.html
+++ b/project/about.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>เกี่ยวกับเรา | EasyRice</title>
-  <link rel="stylesheet" href="about.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
