--- a/project/about.html
+++ b/project/about.html
@@ -1,96 +1,118 @@
 <!DOCTYPE html>
 <html lang="th">
 <head>
-  <meta charset="UTF-8">
-  <title>เกี่ยวกับเรา | EasyRice</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>EasyRice - เกี่ยวกับเรา</title>
+
+    <!-- CSS หลัก -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Google Font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&display=swap" rel="stylesheet">
+
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
-  <!-- Navbar -->
-  <header class="navbar">
-    <div class="logo">EasyRice</div>
-    <nav>
-      <a href="#">หน้าแรก</a>
-      <a href="#">สินค้า</a>
-      <a href="#" class="active">เกี่ยวกับเรา</a>
-      <a href="#">ข่าวสาร</a>
-      <a href="#">ติดต่อ</a>
-    </nav>
-    <button class="login-btn">เข้าสู่ระบบ</button>
-  </header>
-
-  <!-- Hero Section -->
-  <section class="hero">
-    <div class="hero-content">
-      <h1>เกี่ยวกับ EasyRice</h1>
-      <p class="subtitle">
-        แพลตฟอร์มจองต้นกล้าและบริการปลูกดำข้าวออนไลน์
-      </p>
-      <p class="desc">
-        เราเชื่อมโยงเกษตรกรและผู้ใช้งาน  
-        เพื่อให้การปลูกข้าวเป็นเรื่องง่าย สะดวก และโปร่งใส
-      </p>
+<!-- ===== Navbar ===== -->
+<header class="navbar">
+    <div class="container">
+        <a href="index.html" class="logo">🌾 EasyRice</a>
+        <nav>
+            <ul>
+                <li><a href="index.html">หน้าแรก</a></li>
+                <li><a href="products.html">สินค้า</a></li>
+                <li><a href="about.html" class="active">เกี่ยวกับเรา</a></li>
+                <li><a href="#">ข่าวสาร</a></li>
+                <li><a href="contact.html">ติดต่อ</a></li>
+            </ul>
+        </nav>
+        <a href="sign-in.html" class="btn-signin">เข้าสู่ระบบ</a>
     </div>
-  </section>
+</header>
 
-  <!-- About -->
-  <section class="section">
-    <h2>EasyRice คืออะไร</h2>
-    <p>
-      EasyRice คือแพลตฟอร์มออนไลน์ที่พัฒนาขึ้นเพื่ออำนวยความสะดวก
-      ในการจองต้นกล้าและบริการปลูกดำข้าว โดยเชื่อมต่อผู้ใช้งาน
-      กับเกษตรกรและผู้ให้บริการโดยตรง
-    </p>
-  </section>
-
-  <!-- Vision & Mission -->
-  <section class="section gray">
-    <div class="grid-2">
-      <div class="card">
-        <h3>🌱 วิสัยทัศน์</h3>
+<!-- ===== Hero Section ===== -->
+<section class="about-hero">
+    <div class="about-hero-content">
+        <h1>เกี่ยวกับ EasyRice</h1>
         <p>
-          เป็นแพลตฟอร์มด้านการเกษตรที่ช่วยให้การปลูกข้าว
-          เป็นเรื่องง่าย เข้าถึงได้ และยั่งยืน
+            แพลตฟอร์มจองต้นกล้าและบริการปลูกดำข้าวออนไลน์  
+            เพื่อเกษตรกรไทยในยุคดิจิทัล
         </p>
-      </div>
-      <div class="card">
-        <h3>🎯 พันธกิจ</h3>
-        <ul>
-          <li>พัฒนาแพลตฟอร์มที่ใช้งานง่าย</li>
-          <li>สนับสนุนเกษตรกรไทย</li>
-          <li>เพิ่มประสิทธิภาพการปลูกข้าว</li>
-          <li>สร้างความเชื่อมั่นให้ผู้ใช้งาน</li>
-        </ul>
-      </div>
     </div>
-  </section>
+</section>
 
-  <!-- Services -->
-  <section class="section">
-    <h2>บริการของเรา</h2>
-    <div class="grid-3">
-      <div class="card">
-        <h3>🌾 จองต้นกล้า</h3>
-        <p>เลือกชนิดต้นกล้าได้ตามความต้องการผ่านระบบออนไลน์</p>
-      </div>
-      <div class="card">
-        <h3>🚜 ปลูกดำข้าว</h3>
-        <p>บริการปลูกดำโดยผู้เชี่ยวชาญ สะดวกและรวดเร็ว</p>
-      </div>
-      <div class="card">
-        <h3>📊 ติดตามสถานะ</h3>
-        <p>ตรวจสอบข้อมูลและสถานะการให้บริการได้ตลอดเวลา</p>
-      </div>
+<!-- ===== About Content ===== -->
+<section class="about-section">
+    <div class="container small">
+        <h2>EasyRice คืออะไร</h2>
+        <p>
+            EasyRice คือแพลตฟอร์มออนไลน์ที่พัฒนาขึ้นเพื่ออำนวยความสะดวก
+            ในการจองต้นกล้าและบริการปลูกดำข้าว
+            โดยเชื่อมต่อผู้ใช้งานกับเกษตรกรและผู้ให้บริการโดยตรง
+        </p>
     </div>
-  </section>
+</section>
 
-  <!-- CTA -->
-  <section class="cta">
-    <h2>ร่วมเป็นส่วนหนึ่งกับ EasyRice</h2>
-    <p>ยกระดับการเกษตรไทยสู่ยุคดิจิทัลไปพร้อมกับเรา</p>
-    <button>ติดต่อเรา</button>
-  </section>
+<!-- ===== Vision & Mission ===== -->
+<section class="about-section gray-bg">
+    <div class="container grid-2">
+        <div class="about-card">
+            <h3>🌱 วิสัยทัศน์</h3>
+            <p>
+                เป็นแพลตฟอร์มด้านการเกษตรที่ช่วยให้การปลูกข้าว
+                เป็นเรื่องง่าย เข้าถึงได้ และยั่งยืน
+            </p>
+        </div>
+
+        <div class="about-card">
+            <h3>🎯 พันธกิจ</h3>
+            <ul>
+                <li>พัฒนาแพลตฟอร์มที่ใช้งานง่าย</li>
+                <li>สนับสนุนเกษตรกรไทย</li>
+                <li>เพิ่มประสิทธิภาพการปลูกข้าว</li>
+                <li>สร้างความเชื่อมั่นให้ผู้ใช้งาน</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
+<!-- ===== Services ===== -->
+<section class="about-section">
+    <div class="container">
+        <h2>บริการของเรา</h2>
+
+        <div class="grid-3">
+            <div class="about-card">
+                <i class="fas fa-seedling icon"></i>
+                <h3>จองต้นกล้า</h3>
+                <p>เลือกชนิดต้นกล้าได้ตามความต้องการผ่านระบบออนไลน์</p>
+            </div>
+
+            <div class="about-card">
+                <i class="fas fa-tractor icon"></i>
+                <h3>บริการปลูกดำ</h3>
+                <p>บริการปลูกดำข้าวโดยผู้เชี่ยวชาญ สะดวกและรวดเร็ว</p>
+            </div>
+
+            <div class="about-card">
+                <i class="fas fa-chart-line icon"></i>
+                <h3>ติดตามสถานะ</h3>
+                <p>ตรวจสอบข้อมูลการให้บริการได้แบบเรียลไทม์</p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- ===== CTA ===== -->
+<section class="about-cta">
+    <h2>ร่วมยกระดับการเกษตรไทยไปกับ EasyRice</h2>
+    <a href="contact.html" class="btn-primary">ติดต่อเรา</a>
+</section>
 
 </body>
 </html>
