--- a/project/about.html
+++ b/project/about.html
@@ -20,20 +20,21 @@
 
 <!-- ===== Navbar ===== -->
 <header class="navbar">
-    <div class="container">
-        <a href="index.html" class="logo">🌾 EasyRice</a>
-        <nav>
-            <ul>
-                <li><a href="index.html">หน้าแรก</a></li>
-                <li><a href="products.html">สินค้า</a></li>
-                <li><a href="about.html" class="active">เกี่ยวกับเรา</a></li>
-                <li><a href="#">ข่าวสาร</a></li>
-                <li><a href="contact.html">ติดต่อ</a></li>
-            </ul>
-        </nav>
-        <a href="sign-in.html" class="btn-signin">เข้าสู่ระบบ</a>
-    </div>
-</header>
+        <div class="container">
+            <a href="index.html" class="logo">🌾 EasyRice</a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">หน้าแรก</a></li>
+                    <li><a href="product.html" class="active">สินค้า</a></li>
+                    <li><a href="about.html">เกี่ยวกับเรา</a></li>
+                    <li><a href="about.html">ข่าวสาร</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
+                </ul>
+            </nav>
+            <a href="sign-in.html" class="btn-signin">เข้าสู่ระบบ</a>
+        </div>
+    </header>
+
 
 <!-- ===== Hero Section ===== -->
 <section class="about-hero">
