--- a/project/about.html
+++ b/project/about.html
@@ -7,7 +7,7 @@
 
     <!-- CSS หลัก -->
     <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="about.css">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,7 +41,7 @@
     <div class="about-hero-content">
         <h1>เกี่ยวกับ EasyRice</h1>
         <p>
-            แพลตฟอร์มจองต้นกล้าและบริการปลูกดำข้าวออนไลน์  
+            แพลตฟอร์มซื้อขายต้นกล้าและบริการปลูกดำข้าวออนไลน์  
             เพื่อเกษตรกรไทยในยุคดิจิทัล
         </p>
     </div>
@@ -53,7 +53,7 @@
         <h2>EasyRice คืออะไร</h2>
         <p>
             EasyRice คือแพลตฟอร์มออนไลน์ที่พัฒนาขึ้นเพื่ออำนวยความสะดวก
-            ในการจองต้นกล้าและบริการปลูกดำข้าว
+            ในการซื้อขายต้นกล้าและบริการปลูกดำข้าว
             โดยเชื่อมต่อผู้ใช้งานกับเกษตรกรและผู้ให้บริการโดยตรง
         </p>
     </div>
@@ -90,7 +90,7 @@
         <div class="grid-3">
             <div class="about-card">
                 <i class="fas fa-seedling icon"></i>
-                <h3>จองต้นกล้า</h3>
+                <h3>ซื้อต้นกล้า</h3>
                 <p>เลือกชนิดต้นกล้าได้ตามความต้องการผ่านระบบออนไลน์</p>
             </div>
 
@@ -110,10 +110,13 @@
 </section>
 
 <!-- ===== CTA ===== -->
-<section class="about-cta">
-    <h2>ร่วมยกระดับการเกษตรไทยไปกับ EasyRice</h2>
-    <a href="contact.html" class="btn-primary">ติดต่อเรา</a>
-</section>
+ <footer>
+        <div class="container">
+            <h3>EasyRice Seedling Hub</h3>
+            <p>แหล่งรวมพันธุกรรมข้าวคุณภาพ เพื่อเกษตรกรไทย</p>
+            <p style="font-size: 0.8rem; margin-top: 20px; color: #aaa;">&copy; 2024 EasyRice. All Rights Reserved.</p>
+        </div>
+    </footer>
 
 </body>
 </html>
