--- a/project/contact.html
+++ b/project/contact.html
@@ -13,8 +13,6 @@
 </head>
 <body class="login-page-body">
 
-
-
     <header class="navbar">
         <div class="container">
             <a href="index.html" class="logo">🌾 EasyRice</a>
@@ -30,7 +28,6 @@
             <a href="sign-in.html" class="btn-signin">เข้าสู่ระบบ</a>
         </div>
     </header>
-
 
     <main class="container" style="margin-top: 50px; margin-bottom: 50px;">
         <div class="unified-contact-card">
@@ -104,7 +101,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 EasyRice - ระบบจองต้นกล้าและบริการปักดำออนไลน์</p>
+            <p>&copy; 2024 EasyRice - ระบบซื้อขายต้นกล้าและบริการปักดำออนไลน์</p>
         </div>
     </footer>
 
