--- a/project/admin.html
+++ b/project/admin.html
@@ -6,9 +6,18 @@
     <title>EasyRice Admin - จัดการสินค้า</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
     <style>
-        :root { --primary: #4CAF50; --bg: #f4f7f6; }
-        body { font-family: 'Kanit', sans-serif; background: var(--bg); margin: 0; padding-bottom: 50px; }
+        :root { 
+            --primary: #4CAF50; 
+            --bg: #f4f7f6; 
+        }
+        body { 
+            font-family: 'Kanit', sans-serif; 
+            background-image: url('../project/images/background.png');
+            margin: 0; 
+            padding-bottom: 50px; 
+        }
         .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
         .header { background: #fff; padding: 20px; box-shadow: 0 2px 5px rgba(0,0,0,0.05); display: flex; justify-content: space-between; align-items: center; }
         .logo { color: var(--primary); font-size: 1.5rem; font-weight: bold; text-decoration: none; }
@@ -26,13 +35,21 @@
     </style>
 </head>
 <body>
-
-    <nav class="header">
-        <div class="container" style="width: 100%; display:flex; justify-content:space-between;">
-            <a href="#" class="logo">🌾 EasyRice Admin</a>
+    <header class="navbar">
+        <div class="container">
+            <a href="index.html" class="logo">🌾 EasyRice</a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">หน้าแรก</a></li>
+                    <li><a href="product.html" class="active">สินค้า</a></li>
+                    <li><a href="about.html">เกี่ยวกับเรา</a></li>
+                    <li><a href="about.html">ข่าวสาร</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
+                </ul>
+            </nav>
             <a href="index.html" target="_blank" style="text-decoration:none; color: var(--primary);">ไปที่หน้าสินค้าหน้าร้าน <i class="fas fa-external-link-alt"></i></a>
         </div>
-    </nav>
+    </header>
 
     <div class="container">
         <div class="card">
