--- a/project/admin.html
+++ b/project/admin.html
@@ -14,7 +14,7 @@
         }
         body { 
             font-family: 'Kanit', sans-serif; 
-            background-image: url('../project/images/background.png');
+            background-image: url('images/background.png');
             margin: 0; 
             padding-bottom: 50px; 
         }
