--- a/project/product.html
+++ b/project/product.html
@@ -20,7 +20,7 @@
         body { 
             font-family: 'Kanit', sans-serif; 
             margin: 0; 
-            background-image: url('../project/images/background.png'); 
+            background-image: url('images/background.png');
            color: var(--dark); 
          }
         .container { 
