--- a/project/index.html
+++ b/project/index.html
@@ -82,7 +82,7 @@
                 <div class="news-grid">
                     <div class="news-card">
                         <div class="news-img-wrapper">
-                            <img src="../project/images/tonka.jpg" alt="ต้นกล้า">
+                            <img src="images/tonka.jpg" alt="ต้นกล้า">
                         </div>
                         <div class="news-content">
                             <div class="news-date"><i class="far fa-calendar-alt"></i> 10 ม.ค. 2567</div>
@@ -93,7 +93,7 @@
                     </div>
                     <div class="news-card">
                         <div class="news-img-wrapper">
-                            <img src="../project/images/NA.png" alt="ทุ่งนา">
+                            <img src="images/NA.png" alt="ทุ่งนา">
                         </div>
                         <div class="news-content">
                             <div class="news-date"><i class="far fa-calendar-alt"></i> 12 ม.ค. 2567</div>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="news-card">
                         <div class="news-img-wrapper">
-                            <img src="../project/images/DUM.jpeg" alt="รถดำนา">
+                            <img src="images/DUM.jpeg" alt="รถดำนา">
                         </div>
                         <div class="news-content">
                             <div class="news-date"><i class="far fa-calendar-alt"></i> 15 ม.ค. 2567</div>
