--- a/project/product.html
+++ b/project/product.html
@@ -143,10 +143,10 @@
             // 2. ถ้าไม่มีข้อมูล ให้สร้างข้อมูลเริ่มต้น (รวมตัวใหม่ ปทุมธานี 1)
             if (!products || products.length === 0) {
                 products = [
-                    { id: 1, name: 'ข้าวหอมมะลิ 105', desc: 'ต้นกล้าข้าวคุณภาพดี มีกลิ่นหอม ให้ผลผลิตข้าวนุ่ม', age: 25, feature: 'กลิ่นหอม', price: 35, stock: 150, img: 'images/jasmine.jpg' },
-                    { id: 2, name: 'ข้าวไรซ์เบอร์รี่', desc: 'ข้าวเพื่อสุขภาพ อุดมด้วยสารต้านอนุมูลอิสระ', age: 30, feature: 'คุณค่าทางโภชนาการสูง', price: 45, stock: 25, img: 'images/riceberry.jpg' },
-                    { id: 3, name: 'ข้าว RD43', desc: 'พันธุ์ข้าวทนโรค ให้ผลผลิตสูง เหมาะสำหรับการปลูกเชิงพาณิชย์', age: 20, feature: 'ทนโรค ผลผลิตสูง', price: 30, stock: 200, img: 'images/rd43.jpg' },
-                    { id: 4, name: 'ข้าวปทุมธานี 1', desc: 'พันธุ์ข้าวอายุสั้น ให้ผลผลิตดี ข้าวสุกขาวนวล', age: 22, feature: 'อายุสั้น', price: 32, stock: 120, img: 'images/ptumthani1.jpg' }
+                    { id: 1, name: 'ข้าวหอมมะลิ 105', desc: 'ต้นกล้าข้าวคุณภาพดี มีกลิ่นหอม ให้ผลผลิตข้าวนุ่ม', age: 25, feature: 'กลิ่นหอม', price: 35, stock: 150, img: '../images/jasmine.jpg' },
+                    { id: 2, name: 'ข้าวไรซ์เบอร์รี่', desc: 'ข้าวเพื่อสุขภาพ อุดมด้วยสารต้านอนุมูลอิสระ', age: 30, feature: 'คุณค่าทางโภชนาการสูง', price: 45, stock: 25, img: '../images/riceberry.jpg' },
+                    { id: 3, name: 'ข้าว RD43', desc: 'พันธุ์ข้าวทนโรค ให้ผลผลิตสูง เหมาะสำหรับการปลูกเชิงพาณิชย์', age: 20, feature: 'ทนโรค ผลผลิตสูง', price: 30, stock: 200, img: '../images/rd43.jpg' },
+                    { id: 4, name: 'ข้าวปทุมธานี 1', desc: 'พันธุ์ข้าวอายุสั้น ให้ผลผลิตดี ข้าวสุกขาวนวล', age: 22, feature: 'อายุสั้น', price: 32, stock: 120, img: '../images/ptumthani1.jpg' }
                 ];
                 localStorage.setItem('easyrice_db', JSON.stringify(products));
             }
