--- a/project/pages/about.html
+++ b/project/pages/about.html
@@ -6,8 +6,7 @@
     <title>EasyRice - เกี่ยวกับเรา</title>
 
     <!-- CSS หลัก -->
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="/project/css/style.css">
     <!-- Google Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
