--- a/project/pages/admin.html
+++ b/project/pages/admin.html
@@ -6,7 +6,7 @@
     <title>EasyRice Admin - จัดการสินค้า</title>
     <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/project/css/style.css">
     <style>
         :root { 
             --primary: #4CAF50; 
@@ -14,7 +14,7 @@
         }
         body { 
             font-family: 'Kanit', sans-serif; 
-            background-image: url('images/background.png');
+            background-image: url('../images/background.png');
             margin: 0; 
             padding-bottom: 50px; 
         }
