--- a/project/pages/index.html
+++ b/project/pages/index.html
@@ -15,14 +15,13 @@
         <div class="container">
             <a href="index.html" class="logo">🌾 EasyRice</a>
             <nav>
-                <ul>
-                    <li><a href="index.html">หน้าแรก</a></li>
-                    <li><a href="product.html" class="active">สินค้า</a></li>
-                    <li><a href="about.html">เกี่ยวกับเรา</a></li>
-                    <li><a href="about.html">ข่าวสาร</a></li>
-                    <li><a href="contact.html">ติดต่อ</a></li>
-                </ul>
-            </nav>
+            <ul>
+                <li><a href="index.html" class="active">หน้าแรก</a></li>
+                <li><a href="product.html">สินค้า</a></li>
+                <li><a href="about.html">ข่าวสาร</a></li>
+                <li><a href="contact.html">ติดต่อ</a></li>
+            </ul>
+        </nav>
             <a href="sign-in.html" class="btn-signin">เข้าสู่ระบบ</a>
         </div>
     </header>
@@ -82,35 +81,35 @@
                 <div class="news-grid">
                     <div class="news-card">
                         <div class="news-img-wrapper">
-                            <img src="images/tonka.jpg" alt="ต้นกล้า">
+                            <img src="../images/tonka.jpg" alt="ต้นกล้า">
                         </div>
                         <div class="news-content">
                             <div class="news-date"><i class="far fa-calendar-alt"></i> 10 ม.ค. 2567</div>
                             <h3>ทำไมต้องใช้ต้นกล้าอายุ 20 วัน?</h3>
                             <p>ต้นกล้าในวัยนี้รากกำลังเดินดี เมื่อนำไปปักดำจะฟื้นตัวเร็ว แตกกอได้ดีกว่าต้นกล้าแก่...</p>
-                            <a href="#" class="read-more-btn">อ่านต่อ <i class="fas fa-arrow-right"></i></a>
+                            <a href="about.html" class="read-more-btn">อ่านต่อ <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="news-card">
                         <div class="news-img-wrapper">
-                            <img src="images/NA.png" alt="ทุ่งนา">
+                            <img src="../images/NA.png" alt="ทุ่งนา">
                         </div>
                         <div class="news-content">
                             <div class="news-date"><i class="far fa-calendar-alt"></i> 12 ม.ค. 2567</div>
                             <h3>วิธีเลือกพันธุ์ข้าวให้เหมาะกับดิน</h3>
                             <p>ดินเค็ม ดินเปรี้ยว หรือพื้นที่ลุ่มน้ำท่วมถึง การเลือกพันธุ์ข้าวให้ถูกโฉลกกับดินจะช่วยเพิ่มผลผลิต...</p>
-                            <a href="#" class="read-more-btn">อ่านต่อ <i class="fas fa-arrow-right"></i></a>
+                            <a href="about.html" class="read-more-btn">อ่านต่อ <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="news-card">
                         <div class="news-img-wrapper">
-                            <img src="images/DUM.jpeg" alt="รถดำนา">
+                            <img src="../images/DUM.jpeg" alt="รถดำนา">
                         </div>
                         <div class="news-content">
                             <div class="news-date"><i class="far fa-calendar-alt"></i> 15 ม.ค. 2567</div>
                             <h3>เทคนิคเตรียมดินก่อนรถดำลง</h3>
                             <p>การปรับหน้าดินให้เรียบเสมอและการรักษาระดับน้ำ เป็นหัวใจสำคัญที่จะทำให้รถดำทำงานได้ราบรื่น...</p>
-                            <a href="#" class="read-more-btn">อ่านต่อ <i class="fas fa-arrow-right"></i></a>
+                            <a href="about.html" class="read-more-btn">อ่านต่อ <i class="fas fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
