--- a/project/pages/sign-in.html
+++ b/project/pages/sign-in.html
@@ -16,14 +16,13 @@
         <div class="container">
             <a href="index.html" class="logo">🌾 EasyRice</a>
             <nav>
-                <ul>
-                    <li><a href="index.html">หน้าแรก</a></li>
-                    <li><a href="products.html">สินค้า</a></li>
-                    <li><a href="about.html">เกี่ยวกับเรา</a></li>
-                    <li><a href="#">ข่าวสาร</a></li>
-                    <li><a href="contact.html">ติดต่อ</a></li>
-                </ul>
-            </nav>
+            <ul>
+                <li><a href="index.html">หน้าแรก</a></li>
+                <li><a href="product.html">สินค้า</a></li>
+                <li><a href="about.html">ข่าวสาร</a></li>
+                <li><a href="contact.html" class="active">ติดต่อ</a></li>
+            </ul>
+        </nav>
             <a href="sign-in.html" class="btn-signin active">เข้าสู่ระบบ</a>
         </div>
     </header>
