--- a/project/pages/admin.html
+++ b/project/pages/admin.html
@@ -41,7 +41,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">หน้าแรก</a></li>
-                    <li><a href="product.html" class="active">สินค้า</a></li>
+                    <li><a href="product.html">สินค้า</a></li>
                     <li><a href="about.html">เกี่ยวกับเรา</a></li>
                     <li><a href="about.html">ข่าวสาร</a></li>
                     <li><a href="contact.html">ติดต่อ</a></li>
