--- a/project/pages/checkout.html
+++ b/project/pages/checkout.html
@@ -18,11 +18,10 @@
             <a href="#" class="logo">🌾 EasyRice</a>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">หน้าแรก</a></li>
-                    <li><a href="product.html">สินค้า</a></li>
-                    <li><a href="#service">เกี่ยวกับเรา</a></li>
-                    <li><a href="#">ข่าวสาร</a></li>
-                    <li><a href="#">ติดต่อ</a></li>
+                    <li><a href="index.html" >หน้าแรก</a></li>
+                    <li><a href="product.html" class="active">สินค้า</a></li>
+                    <li><a href="about.html">ข่าวสาร</a></li>
+                    <li><a href="contact.html">ติดต่อ</a></li>
                 </ul>
             </nav>
             <a href="sign-in.html" class="btn-signin">เข้าสู่ระบบ</a>
