--- a/project/pages/contact.html
+++ b/project/pages/contact.html
@@ -19,10 +19,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">หน้าแรก</a></li>
-                    <li><a href="product.html" class="active">สินค้า</a></li>
-                    <li><a href="about.html">เกี่ยวกับเรา</a></li>
+                    <li><a href="product.html">สินค้า</a></li>
                     <li><a href="about.html">ข่าวสาร</a></li>
-                    <li><a href="contact.html">ติดต่อ</a></li>
+                    <li><a href="contact.html" class="active">ติดต่อ</a></li>
                 </ul>
             </nav>
             <a href="sign-in.html" class="btn-signin">เข้าสู่ระบบ</a>
