--- a/project/pages/history.html
+++ b/project/pages/history.html
@@ -16,13 +16,13 @@
         <div class="container">
             <a href="index.html" class="logo">🌾 EasyRice</a>
             <nav>
-                <ul>
-                    <li><a href="index.html">หน้าแรก</a></li>
-                    <li><a href="product.html">สินค้า</a></li>
-                    <li><a href="history.html" class="active">ประวัติการสั่งซื้อ</a></li>
-                    <li><a href="contact.html">ติดต่อเรา</a></li>
-                </ul>
-            </nav>
+            <ul>
+                <li><a href="index.html">หน้าแรก</a></li>
+                <li><a href="product.html">สินค้า</a></li>
+                <li><a href="about.html">ข่าวสาร</a></li>
+                <li><a href="contact.html">ติดต่อ</a></li>
+            </ul>
+        </nav>
             <div class="user-profile">
                 <span>สวัสดี, คุณสมชาย</span>
                 <a href="sign-in.html" class="btn-signin" style="margin-left:10px;">ออกจากระบบ</a>
